# Robot-Tests-AI

./: .gitignore  README.md  pyproject.toml
resources/ai/: ai_helper.py
resources/general/: keywords.resource  variables.resource
tests/: login.robot
